Fix spacings and line heights.

--- a/static/main.css
+++ b/static/main.css
@@ -15,6 +15,7 @@ body {
   line-height: 1.25;
   min-height: 100vh;
   color: #313131;
+  display: flex;
 }
 
 body, h1 {
@@ -54,9 +55,8 @@ a {
 
 
 main {
-  padding: 1em;
+  padding: 0 1em;
   text-align: center;
-  max-width: 30em;
   margin: auto;
 }
 
@@ -91,7 +91,7 @@ main {
 
 
 .social-icon {
-  margin-right: .5em;
+  margin-right: .3em;
 }
 
 button.call {
@@ -106,17 +106,23 @@ button.call {
 
 @media (min-width: 43.75em) {
   body {
-    line-height: 1.375;
+    line-height: 1.375em;
   }
   h1 {
     font-size: 2.5em;
-    line-height: 1.125;
+    line-height: 1.125em;
+  }
+  .profile-picture {
+    width: 12em;
   }
 }
 
 @media (min-width: 56.25em) {
   h1 {
     font-size: 3em;
-    line-height: 1.05;
+    line-height: 1.05em;
+  }
+  .profile-picture {
+    width: 14em;
   }
 }
